--- a/tool/src/webapp/templates/ShowPage.html
+++ b/tool/src/webapp/templates/ShowPage.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html rsf:id="html" xmlns="http://www.w3.org/1999/xhtml">
+<html rsf:id="html" xmlns="http://www.w3.org/1999/xhtml" xmlns:rsf="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE"/>
@@ -959,7 +959,7 @@ function resizeiframe(id) {
                     <div class="border2 controlsPanel">                 
                         <p class="required">
                             <label rsf:id="msg=simplepage.upload_label" for="mm-file">File</label>
-                            <input type="file" name="mm-file" id="mm-file" style="width:95%" class="edit-multimedia-input" />
+                            <input type="file" name="mm-file" id="mm-file" style="width:95%" class="edit-multimedia-input" multiple="multiple"/>
                         </p>
                         <p class="required" style="">
                             <a href="#" id="mm-choose" rsf:id="mm-choose">...or choose exiting file</a>
