WL-4145 Changed position of Reorder button on Lessons tool.

--- a/tool/src/webapp/templates/ShowPage.html
+++ b/tool/src/webapp/templates/ShowPage.html
@@ -175,7 +175,7 @@ function resizeiframe(id) {
                 
                 <li style="float:right"><a href="#" role="menuitem" rsf:id="permissions"></a></li>
                 <li style="float:right"><a href="#" role="menuitem" rsf:id="help" target="_blank"></a></li>
-                <li style="float:right"><a href="#" role="menuitem" rsf:id="reorder"></a></li>
+                <li><a href="#" role="menuitem" rsf:id="reorder"></a></li>
 			</ul>
 		</div>
 		
