WL-4155 Added Customised startup/help page for Lessons tool.

--- a/tool/src/webapp/templates/instructions/accessibility.html
+++ b/tool/src/webapp/templates/instructions/accessibility.html
@@ -21,7 +21,7 @@ background-color: #ffffdd;
 <blockquote>
 
 <p>
-[<a id="return" href="general.html"> Back to main help screen</a>]
+[<a id="return" href="new-general.html"> Back to main help screen</a>]
 <script>
    var a = document.getElementById('return');
    if (window.location.search != '')
