--- a/tool/src/webapp/templates/instructions/multimedia.html
+++ b/tool/src/webapp/templates/instructions/multimedia.html
@@ -22,7 +22,7 @@ margin-right:345px;
 }
 </style>
 <blockquote>
-<p>[<a id="return"  href="general.html"> Back to main help screen</a>]</p>
+<p>[<a id="return"  href="new-general.html"> Back to main help screen</a>]</p>
 <script>
    var a = document.getElementById('return');
    if (window.location.search != '')
