--- a/tool/src/webapp/templates/instructions/website.html
+++ b/tool/src/webapp/templates/instructions/website.html
@@ -21,7 +21,7 @@ margin-right:345px;
 <body  onload="setMainFrameHeight('Main3d9c20bexcbc5x45c7x85a4xdf613b41b603')">
 <blockquote>
 <p>
-[<a href="general.html"> Back to main help screen</a>]
+[<a href="new-general.html"> Back to main help screen</a>]
 
 <h2> ADDING CONTENT FROM PACKAGES SUCH AS CAMTASIA, WIMBA CREATE AND ARTICULATE</h2>
 
