--- a/tool/src/webapp/templates/instructions/website_es.html
+++ b/tool/src/webapp/templates/instructions/website_es.html
@@ -21,7 +21,7 @@ margin-right:345px;
 <body  onload="setMainFrameHeight('Main3d9c20bexcbc5x45c7x85a4xdf613b41b603')">
 <blockquote>
 <p>
-[<a href="general.html"> Volver a la p&aacute;gina principal de ayuda.</a>]
+[<a href="new-general.html"> Volver a la p&aacute;gina principal de ayuda.</a>]
 
 <h2> A&Ntilde;ADIENDO CONTENIDO DE PAQUETES COMO CANTASIA, WIMBA CREATE Y ARTICULATE</h2>
 
