WL-4155 'Getting started with Lessons' link on help page will open in a new tab.

--- a/tool/src/webapp/templates/instructions/new-general.html
+++ b/tool/src/webapp/templates/instructions/new-general.html
@@ -15,7 +15,7 @@ From the Add Content dropdown list, choose the appropriate item:</p>
 <strong>Add Assignment</strong> - add an existing assignment<br/>
 <strong>Add Forum Topic</strong> - add an existing forum topic<br/>
 <strong>Add Subpage</strong> - add a subpage</p>
-You can add other types of content; for more information see "<a href="https://weblearn.ox.ac.uk/lessonbuilder-tool/templates/instructions/general.html" target="_top">Getting Started with Lessons</a>".<br/>
+You can add other types of content; for more information see "<a href="general.html" target="_blank">Getting Started with Lessons</a>".<br/>
 </p>
 </div>
   </body>
