WL-4272 Added Twitter Timeline component for lessons.
Added new dialog for twitter option in 'ShowPage.html', related variables
and function is added in 'SimplePageBean.java' to create/edit
SimplePageItem for Twitter widget.'messages.properties' is edited
to add new texts.New placeholder property is added for the twitter
widget id.

--- a/tool/src/webapp/css/Simplepagetool.css
+++ b/tool/src/webapp/css/Simplepagetool.css
@@ -993,7 +993,15 @@ div[role="dialog"] {
  position:relative;
  left:10px;
 }
-
+.twitter-div{
+ overflow-y: auto;
+ float: left;margin:
+ 0 10.0px 20.0px 0;
+ clear: right;
+}
+.edit-twitter-div{
+float:left;
+}
 /*
 .edit-col {
     position: absolute !important;
