WL-4020 created Lessons component to show latest announcements in a div.
Added new dialog for Announcements in ShowPage.html ,related variables
and function are added in 'SimplePageBean.java' to create/edit
SimplePageItem of type ANNOUNCEMENTS for Announcements summary widget.
'messages.properties' is edited to add new texts.

--- a/tool/src/webapp/templates/ShowPage.html
+++ b/tool/src/webapp/templates/ShowPage.html
@@ -59,6 +59,7 @@ function resizeiframe(id) {
 <script type="text/javascript" src="$context/js/show-page.js"></script>
 <script type="text/javascript" src="$context/js/delete-confirm.js"></script>
 <script type="text/javascript" src="$context/js/gradingAjax.js"></script>
+<script type="text/javascript" src="$context/js/announcements.js"></script>
 <script type="text/javascript" src="$context/js/twitter.js"></script>
 
 <a href="#" rsf:id="redirect-link" id="redirect-link"></a>
@@ -201,6 +202,10 @@ function resizeiframe(id) {
 		  <li rsf:id="assignment-li">
 		    <a role="menuitem" href="#" rsf:id="add-assignment"><span rsf:id="msg.simplepage.assignment"></span></a>
                     <div rsf:id="msg=simplepage.assignment-descrip"></div>
+		  </li>
+		  <li rsf:id="announcements-li">
+		    <a role="menuitem" href="#" rsf:id="announcements-link" class="announcements-link"><span rsf:id="msg=simplepage.announcementsLinkText"></span></a>
+		    <div rsf:id="msg=simplepage.announcements-descrip"></div>
 		  </li>
 		  <li rsf:id="quiz-li">
 		    <a role="menuitem" href="#" rsf:id="add-quiz"><span rsf:id="msg.simplepage.quiz"></span></a>
@@ -354,6 +359,16 @@ function resizeiframe(id) {
                         <span rsf:id="item-path" class="item-path"></span>
                           <span rsf:id="resource-type-text" class="resource-type-text"></span>
                       </div>
+                    </div>
+                    <div rsf:id="announcements-td" class="edit-col"><div class="edit-announcements-div"><a href="#" class="usebutton edit-announcements" onclick="return false" rsf:id="edit-announcements"></a></div></div>
+                    <div rsf:id="announcementsSpan" class="right-col">
+                        <div rsf:id="item-groups-titles-text" class="item-group-titles"></div>
+                        <div rsf:id="content" class="textbox"></div>
+                        <span style="display:none" rsf:id="announcements-id" class="announcementsId"></span>
+                        <span style="display:none" rsf:id="announcements-widget-height" class="announcementsWidgetHeight"></span>
+                        <span style="display:none" rsf:id="announcements-site-url" class="announcements-site-url"></span>
+                        <span style="display:none" rsf:id="announcements-view-url" class="announcements-view-url"></span>
+                        <input type="hidden" name="numberOfAnnouncements" id="numberOfAnnouncements" />
                     </div>
                     <div rsf:id="edittext-td" class="edit-col"><div><a href="#" class="usebutton itemLink" rsf:id="edit-link"></a></div></div>
                     <div rsf:id="itemSpan" class="right-col">
@@ -712,6 +727,7 @@ function resizeiframe(id) {
 		   <a style="float:right;" href="#" rsf:id="next1" class="usebutton ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">next</a> 
 
 		<div style="display:none;">
+			<p rsf:id="msg=simplepage.announcements-no-message" id="simplepage.announcements-no-message"></p>
 			<p rsf:id="msg=simplepage.add-comment" id="simplepage.add-comment"></p>
 			<p rsf:id="msg=simplepage.edit-comment" id="simplepage.edit-comment"></p>
 			<p rsf:id="msg=simplepage.cancel_message" id="simplepage.cancel_message"></p>
@@ -790,6 +806,7 @@ function resizeiframe(id) {
                 <p rsf:id="msg=simplepage.twitter-name-notblank" id="simplepage.twitter-name-notblank"></p>
                 <p rsf:id="msg=simplepage.height-error-message" id="simplepage.height-error-message"></p>
                 <p rsf:id="msg=simplepage.change-resource-version-instruction" id="simplepage.change-resource-version-instruction"></p>
+                <p rsf:id="msg=simplepage.announcements-error-message" id="simplepage.announcements-error-message"></p>
 			</div>
 
 			<div id="subpage-dialog" rsf:id="subpage-dialog">
@@ -972,6 +989,39 @@ function resizeiframe(id) {
                 </form>
 			</div>
 
+			<div id="add-announcements-dialog" rsf:id="add-announcements-dialog">
+				<form action="#" rsf:id="add-announcements-form" method="post" enctype="multipart/form-data" class="controlPanel">
+					<input type="hidden" rsf:id="csrf23" />
+					<input type="hidden" rsf:id="announcementsEditId" id="announcementsEditId" />
+					<div class="ui-widget" id="announcements-error-container">
+						<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;">
+							<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
+							<strong rsf:id="msg=simplepage.error_colon"></strong> <span id="announcements-error"></span></p>
+						</div>
+					</div>
+					<div rsf:id="announcements-error-div" class="ui-widget">
+						<div class="ui-state-error ui-corner-all" style="margin-bottom: 20px; margin-top:20px; padding: 0 .7em;">
+							<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+							<span rsf:id="announcements-error-span"></span> </p>
+						</div>
+					</div>
+					<div class="announcements-content">
+						<p class="required">
+							<label rsf:id="announcements-height-label" class="pageTitle" for="announcements-height"></label>
+							<input style="margin-left: 104px;" type="text" name="announcements-height" rsf:id="announcements-height" id="announcements-height"  maxlength="99" size="10"/>&nbsp;<span id="announcementsHeightErrmsg"></span>
+						</p>
+						<label for="announcementsNumberDropdown" rsf:id="announcementsNumberDropdownLabel"></label>
+						<select style="margin-left: 80px;" rsf:id="announcementsNumberDropdown" id="announcementsNumberDropdown" name="announcementsNumberDropdown">
+							<option rsf:id="announcementsOption:"><span rsf:id="announcementsOptionText"></span></option>
+						</select><br/>
+						<p class="act">
+							<input class="bold" type="submit" id="announcements-add-item" rsf:id="announcements-add-item" />
+							<input type="submit" rsf:id="announcements-cancel" onclick="closeAnnouncementsDialog(); return false" />
+							<span id="announcements-delete-span" style="display:none"><input type="submit" class="deleteButton" rsf:id="delete-announcements-item" id="delete-announcements-item" /></span><br/>
+						</p>
+					</div>
+				</form>
+			</div>
 			<div id="add-multimedia-dialog" rsf:id="add-multimedia-dialog">
 				<div class="ui-widget" id="mm-error-container">
 					<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;"> 
