--- a/tool/src/webapp/css/Simplepagetool.css
+++ b/tool/src/webapp/css/Simplepagetool.css
@@ -993,6 +993,14 @@ div[role="dialog"] {
  position:relative;
  left:10px;
 }
+.forum-summary-div{
+ border: 1px solid #ccc;
+ float: left;
+ overflow-y: scroll;
+ text-align: left;
+ background-color: #fff;
+ width: 550px;
+}
 .announcements-div{
  border: 1px solid #ccc;
  float: left;
@@ -1026,9 +1034,44 @@ padding: 10px 15px 0 15px
  0 10.0px 20.0px 0;
  clear: right;
 }
+.forumSummaryHeaderDiv{
+ position: relative;
+ width: 100.0%;
+ max-height: 240.0px;
+ vertical-align: top;
+ overflow: hidden;
+ background-color: #eee;
+}
+.forumSummaryHeader{
+ font-family: 'Segoe UI', Segoe, Tahoma, Helvetica, Arial, sans-serif;
+ border-bottom:1px solid #ccc;
+ padding: 10px 0px 10px 15px;
+ font-size: 1.2em;
+ letter-spacing: normal
+}
+.forumSummaryLink{
+ text-decoration: none;
+ color: #444
+}
+.forumSummaryDate{
+ font-size:12px;
+ color:#000;
+ font-weight: normal;
+}
+.forumSummaryList{
+ list-style: none;
+ padding: 0 15px;
+ font-family: 'Segoe UI', Segoe, Tahoma, Helvetica, Arial, sans-serif;
+ color: #666
+}
 .edit-twitter-div{
 float:left;
 }
+
+.forumSummaryItem{
+ margin-bottom: 10px;
+}
+
 .itemTitle {
 font-family: 'Segoe UI', Segoe, Tahoma, Helvetica, Arial, sans-serif;
 color: #666;
