WL-4274 Created calendar component for Lessons page.
New option 'Embed Calendar' is added in the list on Lessons page.
SimplePageItem of type 'Calendar' created for calendar widget.
Calendar shows events from all the merged calendars in the Lessons tool.
If event has hyperlink as description they are shown as hyperlink, same
applies for embed code.

--- a/tool/src/webapp/css/Simplepagetool.css
+++ b/tool/src/webapp/css/Simplepagetool.css
@@ -1076,6 +1076,13 @@ float:left;
 font-family: 'Segoe UI', Segoe, Tahoma, Helvetica, Arial, sans-serif;
 color: #666;
 }
+.calendar-div{
+width: 550px;
+}
+.fc-event{
+cursor: pointer;
+margin-bottom: 6px; /*to add space between two events*/
+}
 
 .itemDate {
 font-family: 'Segoe UI', Segoe, Tahoma, Helvetica, Arial, sans-serif;
