WL-4274 Attachments will be displayed for the events in Calendar widget.
On event click in calendar widget for lessons will now display attachments
if any present. calendar will resize with the screen resizing.

--- a/tool/src/webapp/css/Simplepagetool.css
+++ b/tool/src/webapp/css/Simplepagetool.css
@@ -1079,6 +1079,14 @@ color: #666;
 .calendar-div{
 width: 550px;
 }
+
+.eventAttachmentList{
+display: inline-table;
+}
+
+eventAttachmentItem{
+list-style-type: none;
+}
 .fc-event{
 cursor: pointer;
 margin-bottom: 6px; /*to add space between two events*/
