WL-4017 Forums json request is made only when widget is added to Lessons.
Checking for forumsUrl length in forum-summary.js file before
making json request to 'ForumsEntityProvider' for latest
conversations.
All the divs with class 'forum-summary-div' will be
checked for respective variables and hence will be linked to correct div.
Changed the variable 'numberOfConversations' on ShowPage.html to span from
input type hidden.

--- a/tool/src/webapp/templates/ShowPage.html
+++ b/tool/src/webapp/templates/ShowPage.html
@@ -373,7 +373,7 @@ function resizeiframe(id) {
                         <span style="display:none" rsf:id="forum-summary-widget-height" class="forumSummaryWidgetHeight"></span>
                         <span style="display:none" rsf:id="forum-summary-site-url" class="forum-summary-site-url"></span>
                         <span style="display:none" rsf:id="forum-summary-view-url" class="forum-summary-view-url"></span>
-                        <input type="hidden" name="numberOfMessages" id="numberOfMessages" />
+                        <span style="display:none" rsf:id="numberOfConversations" class="numberOfConversations"></span>
                     </div>
                     <div rsf:id="announcements-td" class="edit-col"><div class="edit-announcements-div"><a href="#" class="usebutton edit-announcements" onclick="return false" rsf:id="edit-announcements"></a></div></div>
                     <div rsf:id="announcementsSpan" class="right-col">
@@ -824,6 +824,7 @@ function resizeiframe(id) {
                 <p rsf:id="msg=simplepage.height-error-message" id="simplepage.height-error-message"></p>
                 <p rsf:id="msg=simplepage.change-resource-version-instruction" id="simplepage.change-resource-version-instruction"></p>
                 <p rsf:id="msg=simplepage.announcements-error-message" id="simplepage.announcements-error-message"></p>
+                <p rsf:id="msg=simplepage.forum-summary-error-message" id="simplepage.forum-summary-error-message"></p>
 			</div>
 
 			<div id="subpage-dialog" rsf:id="subpage-dialog">
