WL-4020 Added icon before the announcements component in Lessons.
Removed hard-coded text for announcements from announcements.js file

--- a/tool/src/webapp/templates/ShowPage.html
+++ b/tool/src/webapp/templates/ShowPage.html
@@ -768,6 +768,7 @@ function resizeiframe(id) {
 			<p rsf:id="msg=simplepage.forum-summary-no-message" id="simplepage.forum-summary-no-message"></p>
 			<p rsf:id="msg=simplepage.forum-header-title" id="simplepage.forum-header-title"></p>
 			<p rsf:id="msg=simplepage.eventAttachments" id="simplepage.eventAttachments"></p>
+			<p rsf:id="msg=simplepage.announcements-header-title" id="simplepage.announcements-header-title"></p>
 		</div>
 		
 		<form class="rubricSelection" rsf:id="rubricSelection" style="display:none;">
